Convert DirectoryInternalModel users and groups from List to Map
Change groups and users fields in DirectoryInternalModel from
List<GroupModel>/List<UserModel> to Map<String, GroupModel>/Map<String, UserModel>,
keyed by group name and username respectively. This enables per-entity
updates via the directory structure, consistent with the map-based
endpoint pattern used throughout the branch.

- Remove List-based setUsers overload from UsersService interface
- Implement Map-based setUsers in Crowd UsersServiceImpl
- Convert GroupsService.setGroups from List to Map
- Update GroupsResource, DirectoriesServiceImpl.handleGroupsAndUsers,
  and all related tests

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>